antlr4_grammar_check_cpp/rewrite_g4_file/.antlr/WatParser.java
// Generated from /home/xyf/antlr_wat/antlr4_grammar_check_cpp/rewrite_g4_file/WatParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class WatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, RPAR=2, NAT=3, INT=4, FLOAT=5, STRING_=6, NUM_TYPE=7, VEC_TYPE=8, 
		VEC_SHAPE=9, CONST=10, VEC_CONST=11, ANY=12, ANYREF=13, NONE=14, NULLREF=15, 
		EQ=16, EQREF=17, I31=18, I31REF=19, STRUCTREF=20, ARRAYREF=21, NOFUNC=22, 
		FUNCREF=23, MUT=24, NULLFUNCREF=25, EXTERN=26, NOEXTERN=27, EXTERNREF=28, 
		NULLEXTERNREF=29, REF=30, NULL=31, ARRAY=32, STRUCT=33, FIELD=34, SUB=35, 
		FINAL=36, REC=37, REF_NULL=38, REF_FUNC=39, REF_EXTERN=40, REF_IS_NULL=41, 
		NOP=42, UNREACHABLE=43, DROP=44, BLOCK=45, LOOP=46, END=47, BR=48, BR_IF=49, 
		BR_TABLE=50, RETURN=51, IF=52, THEN=53, ELSE=54, SELECT=55, CALL=56, CALL_INDIRECT=57, 
		CALL_REF=58, RETURN_CALL=59, RETURN_CALL_REF=60, RETURN_CALL_INDIRECT=61, 
		BR_ON_NULL=62, BR_ON_CAST=63, LOCAL_GET=64, LOCAL_SET=65, LOCAL_TEE=66, 
		GLOBAL_GET=67, GLOBAL_SET=68, TABLE_GET=69, TABLE_SET=70, TABLE_SIZE=71, 
		TABLE_GROW=72, TABLE_FILL=73, TABLE_COPY=74, TABLE_INIT=75, DATA_DROP=76, 
		ELEM_DROP=77, LOAD=78, STORE=79, OFFSET_EQ_NAT=80, ALIGN_EQ_NAT=81, UNARY=82, 
		BINARY=83, TEST=84, COMPARE=85, CONVERT=86, VEC_LOAD=87, VEC_LOAD_LANE=88, 
		VEC_STORE_LANE=89, VEC_UNARY=90, VEC_BINARY=91, VEC_TERNARY=92, VEC_TEST=93, 
		VEC_BITMASK=94, VEC_SHIFT=95, VEC_SHUFFLE=96, VEC_SPLAT=97, VEC_EXTRACT=98, 
		VEC_REPLACE=99, MEMORY_SIZE=100, MEMORY_GROW=101, MEMORY_FILL=102, MEMORY_COPY=103, 
		MEMORY_INIT=104, TYPE=105, FUNC=106, START_=107, PARAM=108, RESULT=109, 
		LOCAL=110, GLOBAL=111, TABLE=112, MEMORY=113, ELEM=114, DATA=115, OFFSET=116, 
		IMPORT=117, EXPORT=118, DECLARE=119, ITEM=120, MODULE=121, BIN=122, QUOTE=123, 
		SCRIPT=124, REGISTER=125, INVOKE=126, GET=127, ASSERT_MALFORMED=128, ASSERT_INVALID=129, 
		ASSERT_UNLINKABLE=130, ASSERT_RETURN=131, ASSERT_TRAP=132, ASSERT_EXHAUSTION=133, 
		INPUT=134, OUTPUT=135, NAN=136, VAR=137, SPACE=138, COMMENT=139;
	public static final int
		RULE_value = 0, RULE_name = 1, RULE_ref_kind = 2, RULE_ref_type = 3, RULE_num_type = 4, 
		RULE_global_type = 5, RULE_def_type = 6, RULE_func_type = 7, RULE_table_type = 8, 
		RULE_memory_type = 9, RULE_type_use = 10, RULE_num = 11, RULE_var_ = 12, 
		RULE_bind_var = 13, RULE_instr = 14, RULE_plain_instr = 15, RULE_select_instr = 16, 
		RULE_select_instr_results = 17, RULE_select_instr_instr = 18, RULE_call_instr = 19, 
		RULE_call_instr_params = 20, RULE_call_instr_instr = 21, RULE_call_instr_params_instr = 22, 
		RULE_call_instr_results_instr = 23, RULE_block_instr = 24, RULE_block = 25, 
		RULE_block_param_body = 26, RULE_expr = 27, RULE_expr1 = 28, RULE_select_expr_results = 29, 
		RULE_call_expr_type = 30, RULE_call_expr_params = 31, RULE_call_expr_results = 32, 
		RULE_if_block = 33, RULE_if_block_result_body = 34, RULE_instr_list = 35, 
		RULE_const_expr = 36, RULE_func_ = 37, RULE_func_fields = 38, RULE_func_fields_import = 39, 
		RULE_func_fields_import_result = 40, RULE_func_fields_body = 41, RULE_func_result_body = 42, 
		RULE_func_body = 43, RULE_table_use = 44, RULE_memory_use = 45, RULE_offset = 46, 
		RULE_elem_kind = 47, RULE_elem_expr = 48, RULE_elem_expr_list = 49, RULE_elem_var_list = 50, 
		RULE_elem_list = 51, RULE_elem = 52, RULE_table = 53, RULE_table_fields = 54, 
		RULE_data = 55, RULE_memory = 56, RULE_memory_fields = 57, RULE_sglobal = 58, 
		RULE_global_fields = 59, RULE_import_desc = 60, RULE_simport = 61, RULE_inline_import = 62, 
		RULE_export_desc = 63, RULE_export_ = 64, RULE_inline_export = 65, RULE_type_ = 66, 
		RULE_type_def = 67, RULE_start_ = 68, RULE_module_field = 69, RULE_module_ = 70, 
		RULE_script_module = 71, RULE_action_ = 72, RULE_assertion = 73, RULE_cmd = 74, 
		RULE_meta = 75, RULE_wconst = 76, RULE_const_list = 77, RULE_result = 78, 
		RULE_script = 79, RULE_module = 80;
	private static String[] makeRuleNames() {
		return new String[] {
			"value", "name", "ref_kind", "ref_type", "num_type", "global_type", "def_type", 
			"func_type", "table_type", "memory_type", "type_use", "num", "var_", 
			"bind_var", "instr", "plain_instr", "select_instr", "select_instr_results", 
			"select_instr_instr", "call_instr", "call_instr_params", "call_instr_instr", 
			"call_instr_params_instr", "call_instr_results_instr", "block_instr", 
			"block", "block_param_body", "expr", "expr1", "select_expr_results", 
			"call_expr_type", "call_expr_params", "call_expr_results", "if_block", 
			"if_block_result_body", "instr_list", "const_expr", "func_", "func_fields", 
			"func_fields_import", "func_fields_import_result", "func_fields_body", 
			"func_result_body", "func_body", "table_use", "memory_use", "offset", 
			"elem_kind", "elem_expr", "elem_expr_list", "elem_var_list", "elem_list", 
			"elem", "table", "table_fields", "data", "memory", "memory_fields", "sglobal", 
			"global_fields", "import_desc", "simport", "inline_import", "export_desc", 
			"export_", "inline_export", "type_", "type_def", "start_", "module_field", 
			"module_", "script_module", "action_", "assertion", "cmd", "meta", "wconst", 
			"const_list", "result", "script", "module"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", null, null, null, null, null, null, null, null, null, 
			"'any'", "'anyref'", "'none'", "'nullref'", "'eq'", "'eqref'", "'i31'", 
			"'i31ref'", "'structref'", "'arrayref'", "'nofunc'", "'funcref'", "'mut'", 
			"'nullfuncref'", "'extern'", "'noextern'", "'externref'", "'nullexternref'", 
			"'ref'", "'null'", "'array'", "'struct'", "'field'", "'sub'", "'final'", 
			"'rec'", "'ref.null'", "'ref.func'", "'ref.extern'", "'ref.is_null'", 
			"'nop'", "'unreachable'", "'drop'", "'block'", "'loop'", "'end'", "'br'", 
			"'br_if'", "'br_table'", "'return'", "'if'", "'then'", "'else'", "'select'", 
			"'call'", "'call_indirect'", "'call_ref'", "'return_call'", "'return_call_ref'", 
			"'return_call_indirect'", null, null, "'local.get'", "'local.set'", "'local.tee'", 
			"'global.get'", "'global.set'", "'table_get'", "'table_set'", "'table_size'", 
			"'table_grow'", "'table_fill'", "'table_copy'", "'table_init'", "'data.drop'", 
			"'elem.drop'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'i8x16.shuffle'", 
			null, null, null, "'memory.size'", "'memory.grow'", "'memory.fill'", 
			"'memory.copy'", "'memory.init'", "'type'", "'func'", "'start'", "'param'", 
			"'result'", "'local'", "'global'", "'table'", "'memory'", "'elem'", "'data'", 
			"'offset'", "'import'", "'export'", "'declare'", "'item'", "'module'", 
			"'binary'", "'quote'", "'script'", "'register'", "'invoke'", "'get'", 
			"'assert_malformed'", "'assert_invalid'", "'assert_unlinkable'", "'assert_return'", 
			"'assert_trap'", "'assert_exhaustion'", "'input'", "'output'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAR", "RPAR", "NAT", "INT", "FLOAT", "STRING_", "NUM_TYPE", "VEC_TYPE", 
			"VEC_SHAPE", "CONST", "VEC_CONST", "ANY", "ANYREF", "NONE", "NULLREF", 
			"EQ", "EQREF", "I31", "I31REF", "STRUCTREF", "ARRAYREF", "NOFUNC", "FUNCREF", 
			"MUT", "NULLFUNCREF", "EXTERN", "NOEXTERN", "EXTERNREF", "NULLEXTERNREF", 
			"REF", "NULL", "ARRAY", "STRUCT", "FIELD", "SUB", "FINAL", "REC", "REF_NULL", 
			"REF_FUNC", "REF_EXTERN", "REF_IS_NULL", "NOP", "UNREACHABLE", "DROP", 
			"BLOCK", "LOOP", "END", "BR", "BR_IF", "BR_TABLE", "RETURN", "IF", "THEN", 
			"ELSE", "SELECT", "CALL", "CALL_INDIRECT", "CALL_REF", "RETURN_CALL", 
			"RETURN_CALL_REF", "RETURN_CALL_INDIRECT", "BR_ON_NULL", "BR_ON_CAST", 
			"LOCAL_GET", "LOCAL_SET", "LOCAL_TEE", "GLOBAL_GET", "GLOBAL_SET", "TABLE_GET", 
			"TABLE_SET", "TABLE_SIZE", "TABLE_GROW", "TABLE_FILL", "TABLE_COPY", 
			"TABLE_INIT", "DATA_DROP", "ELEM_DROP", "LOAD", "STORE", "OFFSET_EQ_NAT", 
			"ALIGN_EQ_NAT", "UNARY", "BINARY", "TEST", "COMPARE", "CONVERT", "VEC_LOAD", 
			"VEC_LOAD_LANE", "VEC_STORE_LANE", "VEC_UNARY", "VEC_BINARY", "VEC_TERNARY", 
			"VEC_TEST", "VEC_BITMASK", "VEC_SHIFT", "VEC_SHUFFLE", "VEC_SPLAT", "VEC_EXTRACT", 
			"VEC_REPLACE", "MEMORY_SIZE", "MEMORY_GROW", "MEMORY_FILL", "MEMORY_COPY", 
			"MEMORY_INIT", "TYPE", "FUNC", "START_", "PARAM", "RESULT", "LOCAL", 
			"GLOBAL", "TABLE", "MEMORY", "ELEM", "DATA", "OFFSET", "IMPORT", "EXPORT", 
			"DECLARE", "ITEM", "MODULE", "BIN", "QUOTE", "SCRIPT", "REGISTER", "INVOKE", 
			"GET", "ASSERT_MALFORMED", "ASSERT_INVALID", "ASSERT_UNLINKABLE", "ASSERT_RETURN", 
			"ASSERT_TRAP", "ASSERT_EXHAUSTION", "INPUT", "OUTPUT", "NAN", "VAR", 
			"SPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WatParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(WatParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(WatParser.FLOAT, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NameContext extends ParserRuleContext {
		public TerminalNode STRING_() { return getToken(WatParser.STRING_, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(STRING_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ref_kindContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(WatParser.FUNC, 0); }
		public TerminalNode EXTERN() { return getToken(WatParser.EXTERN, 0); }
		public Ref_kindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ref_kind; }
	}

	public final Ref_kindContext ref_kind() throws RecognitionException {
		Ref_kindContext _localctx = new Ref_kindContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ref_kind);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_la = _input.LA(1);
			if ( !(_la==EXTERN || _la==FUNC) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ref_typeContext extends ParserRuleContext {
		public TerminalNode FUNCREF() { return getToken(WatParser.FUNCREF, 0); }
		public TerminalNode EXTERNREF() { return getToken(WatParser.EXTERNREF, 0); }
		public Ref_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ref_type; }
	}

	public final Ref_typeContext ref_type() throws RecognitionException {
		Ref_typeContext _localctx = new Ref_typeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ref_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_la = _input.LA(1);
			if ( !(_la==FUNCREF || _la==EXTERNREF) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Num_typeContext extends ParserRuleContext {
		public TerminalNode NUM_TYPE() { return getToken(WatParser.NUM_TYPE, 0); }
		public Ref_typeContext ref_type() {
			return getRuleContext(Ref_typeContext.class,0);
		}
		public Num_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num_type; }
	}

	public final Num_typeContext num_type() throws RecognitionException {
		Num_typeContext _localctx = new Num_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_num_type);
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				match(NUM_TYPE);
				}
				break;
			case FUNCREF:
			case EXTERNREF:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				ref_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Global_typeContext extends ParserRuleContext {
		public Num_typeContext num_type() {
			return getRuleContext(Num_typeContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(WatParser.LPAR, 0); }
		public TerminalNode MUT() { return getToken(WatParser.MUT, 0); }
		public TerminalNode RPAR() { return getToken(WatParser.RPAR, 0); }
		public Global_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_type; }
	}

	public final Global_typeContext global_type() throws RecognitionException {
		Global_typeContext _localctx = new Global_typeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_global_type);
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM_TYPE:
			case FUNCREF:
			case EXTERNREF:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				num_type();
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				match(LPAR);
				setState(176);
				match(MUT);
				setState(177);
				num_type();
				setState(178);
				match(RPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Def_typeContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(WatParser.LPAR, 0); }
		public TerminalNode FUNC() { return getToken(WatParser.FUNC, 0); }
		public Func_typeContext func_type() {
			return getRuleContext(Func_typeContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(WatParser.RPAR, 0); }
		public Def_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_type; }
	}

	public final Def_typeContext def_type() throws RecognitionException {
		Def_typeContext _localctx = new Def_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_def_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(LPAR);
			setState(183);
			match(FUNC);
			setState(184);
			func_type();
			setState(185);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
